--- a/api/views/home.ejs
+++ b/api/views/home.ejs
@@ -5,16 +5,16 @@
 </head>
 <body>
 
-  <h1>Welcome to Our Store</h1>
+  <h1>Welcome to My Backend</h1>
 
   <nav>
     <a href="/">Home</a> |
-    <a href="/products">All Products</a> |
-    <a href="/products/best-rated">Best Rated</a> |
-    <a href="/products/latest">Latest</a>
+    <a href="/login">Login</a> |
+    <a href="/register">Best Rated</a> |
+    <a href="/profile">Latest</a>
   </nav>
 
-  <p>Select a category to view products.</p>
+  <p>Select a category to view.</p>
 
 </body>
 </html>
