Uniyat Practical Institute Of IT and Entrepreneurship

--- a/api/views/home.ejs
+++ b/api/views/home.ejs
@@ -10,8 +10,8 @@
   <nav>
     <a href="/">Home</a> |
     <a href="/login">Login</a> |
-    <a href="/register">Best Rated</a> |
-    <a href="/profile">Latest</a>
+    <a href="/register">Register</a> |
+    <a href="/profile">Profile</a>
   </nav>
 
   <p>Select a category to view.</p>
