--- a/api/views/home.ejs
+++ b/api/views/home.ejs
@@ -8,7 +8,7 @@
   <h1>Welcome to My Backend</h1>
 
   <nav>
-    <a href="/">Home</a> |
+    <a href="/">Home</a> 
   </nav>
 
   <p>Select a category to view.</p>
